Changes font size units.

--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -1,50 +1,35 @@
-  
-  .App-header {
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: calc(10px + 5vmin);
-    margin: 5vmin;
-    color: #95CF67;
-  }
-  
-  #intro {
+    #intro {
     color: black;
     font-weight: bold;
-    padding-top: 5vmin;
-    font-size: 3vmin;
-    margin-left: 10vmin;
+    padding-top: 1em;
+    font-size: 2em;
+    margin-left: 3em;
     align-content: center;
   }
   
   .introHeader {
     background-color: #95CF67;
     color: white;
-    font-size: calc(30px + 4vmin);
     justify-content: center;
     text-align: center;
     align-items: center;
-    padding: 3vmin;
+    padding: 0.5em;
     width: 100%;
   }
   
   #chart-icon {
     color: #95CF67;
-    font-size: 30vmin;
-    padding-left: 5vmin;
+    font-size: 25em;
     float: center;
-    position: relative;
     text-align: center;
     align-content: center;
-    margin-right: 10vmin;
+    padding-bottom: .2em;
+    /* margin-right: 0.5em; */
     overflow: hidden;
   }
   
-    @media screen and (max-width: 770px) {
-     #chart-icon {
-       display: none !important;
-      }
+  @media screen and (max-width: 770px) {
+    #chart-icon {
+      display: none !important;
     }
+  }
