--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -1,4 +1,11 @@
-    #intro {
+  #Digression {
+    color: #95CF67;
+    font-size: 4.5em;
+    text-align: center;
+    font-weight: bold;
+    padding: 0.3em;
+  }
+  #intro {
     color: black;
     font-weight: bold;
     padding-top: 1em;
@@ -15,6 +22,7 @@
     align-items: center;
     padding: 0.5em;
     width: 100%;
+    margin-top: 0%;
   }
   
   #chart-icon {
@@ -24,7 +32,7 @@
     text-align: center;
     align-content: center;
     padding-bottom: .2em;
-    /* margin-right: 0.5em; */
+    padding-right: 0.1em;
     overflow: hidden;
   }
   
