--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -36,6 +36,18 @@
     padding-right: 0.1em;
     overflow: hidden;
   }
+
+  .Green-button {
+    background-color: #95CF67 !important;
+    color: white !important;
+    font-size: 1em !important;
+  }
+
+  .ParagraphStyle {
+    text-align: center;
+    max-width: 70em;
+    margin: 0 auto;
+  }
   
   @media screen and (max-width: 770px) {
     #chart-icon {
