--- a/src/Components/LinearGoal/LinearGoal.css
+++ b/src/Components/LinearGoal/LinearGoal.css
@@ -15,3 +15,9 @@
     color: white !important;
     font-size: 1em !important;
 }
+
+.ParagraphStyle {
+    text-align: center;
+    max-width: 70em;
+    margin: 0 auto;
+}
