Apply custom theme

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,9 @@
+.appbar {
+  cursor: pointer;
+}
+
 .content {
-  position: absolute;
+  position: fixed;
   top: 30%;
   left: 20%;
   display: flex;
