--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,22 @@
 }
 
 .content {
+  margin-top: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.container{
+  margin-left: 20%;
+}
+
+/*
+.appbar {
+  cursor: pointer;
+}
+
+.content {
   position: fixed;
   top: 30%;
   left: 20%;
@@ -10,3 +26,5 @@
   flex-direction: column;
   justify-content: center;
 }
+
+*/
