--- a/src/components/IntroLinear/LinearPurpose/LinearPurpose.css
+++ b/src/components/IntroLinear/LinearPurpose/LinearPurpose.css
@@ -11,7 +11,8 @@
 .slope{
     display: flex;
     justify-content: center;
-    font-weight: bold;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
 }
 
 .description{
