--- a/src/components/IntroLinear/GradeApplication/GradeApplication.css
+++ b/src/components/IntroLinear/GradeApplication/GradeApplication.css
@@ -9,3 +9,12 @@
     width: 60%;
     margin-right: 5%;
 }
+
+@media only screen and (max-width: 900px) {
+    .GradeApplication{
+        flex-direction: column;
+    }
+    .gradeAppDescrip{
+        width: 100%;
+    }
+}
