--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -10,3 +10,9 @@
   left: 10%;
   transform: translate(-50%, -50%);
 }
+
+@media only screen and (max-width: 600px) {
+  .Nav{
+    display:none;
+  }
+}
